--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/header.css">
 </head>
 <body>
     <header>
