--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     </header>
     <main>
         <section class="left">
-            <h1>Awesome tools for Designer & Developer.</h1>
-            <p>Antool is a web collection of information on paid or free Design and Development tools</p>
+            <div class="main-block">
+                <h1>Awesome tools for Designer & Developer.</h1>
+                <p>Antool is a web collection of information on paid or free Design and Development tools</p>
+               <div class="findBut">
+                <img src="/img/search.png" alt="">
+               </div> <input type="text" placeholder="find more than 430+ tools..." class="input"> <a href="" class="button">Search</a>
+            </div>
+            
             
         </section>
         <section class="right"></section>
