--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
             <img src="./img/logo.png" alt="image is not apload">
             antools.
         </div>
-        
+        <div class="list">
+            <a href="#">Home</a>
+            <a href="#">Categories <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4.5 6.75L9 11.25L13.5 6.75" stroke="white" stroke-opacity="0.55" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                </a>
+            <a href="#">My Collection</a>
+            <a href="#">Blog</a>
+        </div>
     </header>
     <main>
         
