add sing-in html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <a href="#">My Collection</a>
             <a href="#">Blog</a>
         </div>
+        <div class="sing-in">
+            <a href="#">Login</a>
+            <a href="#">Sing Up</a>
+        </div>
     </header>
     <main>
         
